Implemented Alignments table API route
